--- a/inner-page.html
+++ b/inner-page.html
@@ -110,7 +110,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Scytics</h3>
+              <h3>Oxyflow</h3>
               <p>
                 Zadeshwar, Bharuch <br>
                 Gujarat, India<br><br>
@@ -167,11 +167,11 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Scytics</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Oxyflow</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
        
-        Designed by <a href=''>Scytics Company</a>
+        Designed by <a href=''>Oxyflow Company</a>
       </div>
     </div>
   </footer><!-- End Footer -->
