--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Scytics - Start Your Journey Now</title>
+  <title>Oxyflow - Start Your Journey Now</title>
   <meta content="Future Of Next Genration" name="description">
   <meta content="" name="keywords">
 
@@ -83,7 +83,7 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Future Of Next Genration, Scytics</h1>
+          <h1>Future Of Next Genration, Oxyflow</h1>
           <!-- <h2>Make Your Future In <span class="auto-input"></span></h2> -->
         </div>
       </div>
@@ -92,31 +92,31 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Lorem Ipsum</a></h3>
+            <h3><a href="">Lorem </a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Dolor Sitema</a></h3>
+            <h3><a href="">Lorem</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Sedare Perspiciatis</a></h3>
+            <h3><a href="">Lorem</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Magni Dolores</a></h3>
+            <h3><a href="">Lorem</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-database-2-line"></i>
-            <h3><a href="">Nemos Enimade</a></h3>
+            <h3><a href="">Lorem</a></h3>
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>They provide for the most worthy pleasures as if the pleasures of the body were to be assumed.</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -808,7 +808,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Scytics</h3>
+              <h3>Oxyflow</h3>
               <p>
                 Zadeshwar, Bharuch <br>
                 Gujarat, India<br><br>
@@ -865,11 +865,11 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Scytics</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Oxyflow</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
  
-        Designed by <a href=''>Scytics Company</a>
+        Designed by <a href=''>Oxyflow Company</a>
       </div>
     </div>
   </footer><!-- End Footer -->
