--- a/other/courses/index.html
+++ b/other/courses/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Scytics - Start Your Journey Now</title>
+  <title>Oxyflow - Start Your Journey Now</title>
   <meta content="Future Of Next Genration" name="description">
   <meta content="" name="keywords">
 
@@ -301,7 +301,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Scytics</h3>
+              <h3>Oxyflow</h3>
               <p>
                 Zadeshwar, Bharuch <br>
                 Gujarat, India<br><br>
@@ -358,14 +358,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Scytics</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Oxyflow</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-        Designed by <a href=''>Scytics Company</a>
+        Designed by <a href=''>Oxyflow Company</a>
       </div>
     </div>
   </footer><!-- End Footer -->
