--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Oxyflow - Start Your Journey Now</title>
   <meta content="Future Of Next Genration" name="description">
   <meta content="" name="keywords">
+  <meta name="google-site-verification" content="UWWFHbtiZ6_S6CfW1noHRq4bNSpZtVmmkjDuvLUNR4E" />
 
   <!-- Favicons -->
   <link href="assets/img/Logo.png" rel="icon">
@@ -135,7 +136,7 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3>They provide for the most worthy pleasures as if the pleasures of the body were to be assumed.</h3>
+            <h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
