--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 </head>
-
+ <meta name="google-site-verification" content="UWWFHbtiZ6_S6CfW1noHRq4bNSpZtVmmkjDuvLUNR4E" />
 <body>
 
   <!-- ======= Header ======= -->
